# gedit-smart-indenter

./: ChangeLog  Makefile.am  README  TODO  autogen.sh  configure.ac
data/: Makefile.am
po/: LINGUAS  POTFILES.in  es.po
src/: Makefile.am  geditsmartindenter-plugin.c  geditsmartindenter-plugin.h  geditsmartindenter.gedit-plugin.desktop.in  gsi-indenter-c.c  gsi-indenter-c.h  gsi-indenter-cxx.c  gsi-indenter-cxx.h  gsi-indenter-python.c  gsi-indenter-python.h  gsi-indenter-simple.c  gsi-indenter-simple.h  gsi-indenter-utils.c  gsi-indenter-utils.h  gsi-indenter.c  gsi-indenter.h  gsi-indenters-manager.c  gsi-indenters-manager.h  gsi-plugin.c  gsi-plugin.h  old.diff  smartindenter.plugin.desktop.in.in
tests/: Makefile.am  regexp_test.py  test-quotes.c
