# Symbol Browser Plugin
scplugindir = $(GEDIT_PLUGINS_DATA_DIR)/gedit-sc-plugin
scplugin_DATA = \
	gedit-sc-plugin.png \
	symbol-class.png \
	symbol-constant.png \
	symbol-define.png \
	symbol-enumerator.png \
	symbol-function.png \
	symbol-macro.png \
	symbol-method.png \
	symbol-struct.png \
	symbol-typedef.png \
	symbol-member.png \
	symbol-variable.png

EXTRA_DIST = $(scplugin_DATA)

